--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <link rel="stylesheet" href="normalize.css">
  <link rel="stylesheet" href="style.css">
  <link rel="stylesheet" href="font-awesome.css">
+ <link rel="stylesheet" href="animate.css">
  </head>
  <body>
  
@@ -29,7 +30,7 @@
      </div>
    </nav>
    <div class="container hero">
-     <h1>Save, share and collaborate.</h1>
+     <h1 class="animated fadeIn">Save, share and collaborate.</h1>
      <p>blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
      <a href="signup.html" class="btn">Start Your Free Trial!</a>
      <img src="images/Dashboard.png" alt="Blocbox" />
