--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
    <nav class="container">
      <div class="one-half">
-       <a href="index.html" class="site-logo"><img src="images/Logo_copy.png" alt="Blocbox" /></a>
+       <a href="index.html" class="site-logo"><img src="images/Logo_copy.png" alt="Blocbox" width="100" height="50" /></a>
      </div>
      <div class="one-half">
        <ul>
