--- a/dashboard.html
+++ b/dashboard.html
@@ -11,9 +11,9 @@
    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
  
    <!-- CSS -->
-   <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/font-awesome.css">
+   <link rel="stylesheet" href="normalize.css">
+   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="font-awesome.css">
  
  </head>
  <body class="dashboard">
@@ -23,7 +23,7 @@
      <div class="items">
        <p>Items</p>
        <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li class="active"><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
          <li><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -31,7 +31,7 @@
        <p>Boxes</p>
        <ul>
          <li><a href="#"><i class="fa fa-inbox"></i> Landing Pages</a></li>
-         <li><a href="images.html"><i class="fa fa-inbox"></i> BB Photos</a></li>
+         <li><a href="images.html"><i class="fa fa-inbox"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-plus-square-o"></i> Add a new box</a></li>
        </ul>
      </div>
