--- a/dashboard.html
+++ b/dashboard.html
@@ -14,9 +14,11 @@
    <link rel="stylesheet" href="normalize.css">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="font-awesome.css">
- 
+   <link rel="stylesheet" href="dropit.css">
  </head>
  <body class="dashboard">
+   <!-- RESPONSIVE NAV -->
+   <a href=""></a>
    <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
@@ -49,6 +51,16 @@
        <div class="header">
          <h1>All Items</h1>
          <a href="#" class="btn">+ Add</a>
+         <ul class="menu">
+            <li>
+              <a href="#" class="btn">+ Add</a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+              </ul>
+            </li>
+          </ul>
        </div>
      </div>
      <div class="container">
@@ -103,5 +115,13 @@
      </div>
    </section>
  </main>
+ <script src="js/jquery-2.1.3.min.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+     $(".#menu").click(functio() {
+         $("#left-nav") .toggleClass("open", 200);
+     });
+   </script>
  </body>
  </html>
