--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
  </head>
  <body class="dashboard">
    <!-- RESPONSIVE NAV -->
-   <a href=""></a>
+   <a class="hamburger" id="menu" href="#">&#9776;</a>
    <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
@@ -50,15 +50,14 @@
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
          <ul class="menu">
             <li>
-              <a href="#" class="btn">+ Add</a>
-              <ul>
-                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
-                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
-                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
-              </ul>
+             <a href="#" class="btn">+ Add</a>
+             <ul>
+               <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+               <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+               <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+               </ul>
             </li>
           </ul>
        </div>
@@ -115,11 +114,11 @@
      </div>
    </section>
  </main>
- <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/dropit.js"></script>
+ <script src="jquery-3.1.1.min.js"></script>
+   <script src="dropit.js"></script>
    <script type="text/javascript">
      $(".menu").dropit();
-     $(".#menu").click(functio() {
+     $(".#menu").click(function() {
          $("#left-nav") .toggleClass("open", 200);
      });
    </script>
