adjusted the responsiveness and the pricing comment

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         <a href="signup.html" class="btn">Start Your Free Trial!</a>
       </div>
     </li>
+    </ul>
      <div class="container">
    <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
  </div>
-   </ul>
  </section>
 
  <!-- Testimonials -->
@@ -163,7 +163,7 @@
          </ul>
        </nav>
        <div class="right-footer-block one-third">
-         <img class="logo" src="images/Logo_copy.png" alt="Blocbox" />
+         <img class="logo" src="images/Logo_copy.png" alt="Blocbox" width="200" height="50" />
        </div>
    </div>
  </footer>
